# win-credentials-provider

./: Cargo.toml  LICENSE  README.md  build.rs  chuleta.md  notes.md
protobuf/: auth.proto
registry/: Register.reg  disable-nla.reg  enable-nla.reg  enable_debug_win.reg  register-cred_and_filter.reg  registry_test_log.reg  test-actor.data-2.reg  test-actor.data.reg  unregister_all.reg
src/: bitmap.rs  broker.rs  classfactory.rs  dll.rs  fields.rs  globals.rs  lib.rs  main.rs  test_utils.rs  types.rs  uds_credential_provider.rs  udscredential.rs  udscredential_filter.rs
src/com/: fields.rs  i_credential_provider.rs  i_credential_provider_events.rs  i_credential_provider_filter.rs  mod.rs  types.rs
src/credential/: fields.rs  mod.rs  types.rs
src/credential/credential/: mod.rs  packer.rs
src/credential/filter/: mod.rs
src/credential/lsa/: mod.rs  tests.rs
src/credential/provider/: mod.rs
src/credentials/: fields.rs  filter.rs  mod.rs  provider.rs  types.rs  workflow.md
src/credentials/credential/: mod.rs  tests.rs
src/credentials/filter/: mod.rs  tests.rs
src/credentials/lsa/: mod.rs  tests.rs
src/credentials/provider/: mod.rs  tests.rs
src/interfaces/: i_credential_provider.rs  i_credential_provider_credential.rs  i_credential_provider_events.rs  i_credential_provider_filter.rs  mod.rs  types.rs
src/messages/: auth.rs  channel.rs  consts.rs  mod.rs
src/messages/channel/: mod.rs  tests.rs
src/util/: com.rs  comstr.rs  helpers.rs  http_client.rs  http_json.rs  logger.rs  mod.rs  safe.rs  traits.rs
src/util/lsa/: mod.rs  tests.rs
src/utils/: com.rs  crypt.rs  helpers.rs  http_client.rs  http_json.rs  log.rs  logger.rs  macros.rs  mod.rs  safe.rs  traits.rs
src/utils/lsa/: mod.rs  tests.rs
tests/: classfactory.rs  credential.rs  credentials.rs  dll_load.rs  normal_logon.rs  remote_logon.rs  workflow.md
tests/common/: mod.rs
tests/utils/: com.rs  dll.rs  mod.rs  test_utils.rs
