[package]
name = "win-cred-provider"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# https://microsoft.github.io/windows-rs/features/
windows = { version = "0.61.3", features = [
    # Networking
    "Win32_Networking_WinHttp",

    # Registry
    "Win32_System_Registry",

    # COM
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",

    # Basic Windows types and utilities
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",

    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",

    # Credential Provider
    "Win32_Security_Credentials",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
# To avoid version conflicts with other imported packages, force this version
windows-core = "0.61.2"

byteorder = "1.5.0"
anyhow = "1.0.99"
widestring = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
log = "0.4.27"
env_logger = "0.11.8"
# For Protocol Buffers
prost = "0.14.1"
prost-types = "0.14.1"
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
prost-build = "0.14.1"
chrono = "0.4.41"
winres = "0.1"


[dev-dependencies]
mockito = "1.7.0"
libloading = "0.8.8"
rand = "0.9.2"
serial_test = "3.2.0"