[package]
name = "win_cred_provider"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# https://microsoft.github.io/windows-rs/features/
windows = { version = "0.61.3", features = [
    # Networking
    "Win32_Networking_WinHttp",

    # Registry
    "Win32_System_Registry",

    # COM
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",

    # Basic Windows types and utilities
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_Storage_EnhancedStorage",

    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",

    "Win32_System_Diagnostics_Debug",

    # Credential Provider
    "Win32_Security_Credentials",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security_Authentication_Identity"
] }
# To avoid version conflicts with other imported packages, force this version
windows-core = "0.61.2"

# crypt part
base64 = "0.22.1"
aes-gcm = "0.10.3"

byteorder = "1.5.0"
anyhow = "1.0.99"
widestring = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# For Protocol Buffers
prost = "0.14.1"
prost-types = "0.14.1"
# Zeroize, for securing data
zeroize = "1.8.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-log = "0.2.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
prost-build = "0.14.1"
chrono = "0.4.41"
winres = "0.1"


[dev-dependencies]
mockito = "1.7.0"
libloading = "0.8.8"
rand = "0.9.2"
serial_test = "3.2.0"
